Add Foxhole Installation Directory Widget

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,10 @@ qt_add_executable(TrenchKit
   MainWindow.ui
   TitleBar.h
   TitleBar.cpp
+  InstallPathWidget.h
+  InstallPathWidget.cpp
+  FoxholeDetector.h
+  FoxholeDetector.cpp
   resources.qrc
 )
 
