Add tests and fix bugs - Fix updater TLS and API path - Fix ArchiveExtractor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -95,38 +95,72 @@ if(WIN32)
         COMMENT "Copying updater helper to output directory"
     )
 
+    set(QT_TLS_PLUGIN_DIR "${Qt6_DIR}/../../../plugins/tls")
+    if(EXISTS "${QT_TLS_PLUGIN_DIR}/qschannelbackend.dll")
+        add_custom_command(TARGET TrenchKit POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E make_directory
+                $<TARGET_FILE_DIR:TrenchKit>/tls
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                "${QT_TLS_PLUGIN_DIR}/qschannelbackend.dll"
+                $<TARGET_FILE_DIR:TrenchKit>/tls/
+            COMMENT "Copying Qt TLS backend plugin to output directory"
+        )
+    endif()
+
     # Qt DLLs
-    add_custom_command(TARGET TrenchKit POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${Qt6_DIR}/../../../bin/Qt6Core.dll"
-            "${Qt6_DIR}/../../../bin/Qt6Gui.dll"
-            "${Qt6_DIR}/../../../bin/Qt6Widgets.dll"
-            "${Qt6_DIR}/../../../bin/Qt6Network.dll"
-            "${Qt6_DIR}/../../../bin/Qt6Concurrent.dll"
-            $<TARGET_FILE_DIR:TrenchKit>
-        COMMENT "Copying Qt DLLs to output directory"
-    )
+    set(QT_BIN_DIR "${Qt6_DIR}/../../../bin")
+    set(QT_APP_DLLS "")
+    foreach(QT_DLL_NAME
+            Qt6Core.dll
+            Qt6Gui.dll
+            Qt6Widgets.dll
+            Qt6Network.dll
+            Qt6Concurrent.dll)
+        if(EXISTS "${QT_BIN_DIR}/${QT_DLL_NAME}")
+            list(APPEND QT_APP_DLLS "${QT_BIN_DIR}/${QT_DLL_NAME}")
+        endif()
+    endforeach()
+    if(QT_APP_DLLS)
+        add_custom_command(TARGET TrenchKit POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                ${QT_APP_DLLS}
+                $<TARGET_FILE_DIR:TrenchKit>
+            COMMENT "Copying Qt DLLs to output directory"
+        )
+    endif()
 
     # MinGW runtime DLLs
     if(MINGW)
         get_filename_component(MINGW_BIN_DIR ${CMAKE_CXX_COMPILER} DIRECTORY)
-        add_custom_command(TARGET TrenchKit POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                "${MINGW_BIN_DIR}/libgcc_s_seh-1.dll"
-                "${MINGW_BIN_DIR}/libstdc++-6.dll"
-                "${MINGW_BIN_DIR}/libwinpthread-1.dll"
-                $<TARGET_FILE_DIR:TrenchKit>
-            COMMENT "Copying MinGW runtime DLLs to output directory"
-        )
+        set(MINGW_DLLS "")
+        foreach(MINGW_DLL_NAME
+                libgcc_s_seh-1.dll
+                libstdc++-6.dll
+                libwinpthread-1.dll)
+            if(EXISTS "${MINGW_BIN_DIR}/${MINGW_DLL_NAME}")
+                list(APPEND MINGW_DLLS "${MINGW_BIN_DIR}/${MINGW_DLL_NAME}")
+            endif()
+        endforeach()
+        if(MINGW_DLLS)
+            add_custom_command(TARGET TrenchKit POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                    ${MINGW_DLLS}
+                    $<TARGET_FILE_DIR:TrenchKit>
+                COMMENT "Copying MinGW runtime DLLs to output directory"
+            )
+        endif()
     endif()
 
     # Qt platform plugin
-    add_custom_command(TARGET TrenchKit POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory
-            $<TARGET_FILE_DIR:TrenchKit>/platforms
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${Qt6_DIR}/../../../plugins/platforms/qwindows.dll"
-            $<TARGET_FILE_DIR:TrenchKit>/platforms/
-        COMMENT "Copying Qt platform plugin to output directory"
-    )
+    set(QT_PLATFORM_DLL "${Qt6_DIR}/../../../plugins/platforms/qwindows.dll")
+    if(EXISTS "${QT_PLATFORM_DLL}")
+        add_custom_command(TARGET TrenchKit POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E make_directory
+                $<TARGET_FILE_DIR:TrenchKit>/platforms
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                "${QT_PLATFORM_DLL}"
+                $<TARGET_FILE_DIR:TrenchKit>/platforms/
+            COMMENT "Copying Qt platform plugin to output directory"
+        )
+    endif()
 endif()
