--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,3 +53,8 @@ jobs:
     - name: Build
       run: |
         cmake --build build/${{ matrix.build_type }}
+
+    - name: Test (Windows Debug)
+      if: runner.os == 'Windows' && matrix.build_type == 'Debug'
+      run: |
+        ctest --test-dir build/${{ matrix.build_type }} --output-on-failure
