--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,15 @@ jobs:
         cache: true
         setup-python: false
 
-    - name: Install Ninja
+    - name: Install Ninja (Windows)
+      if: runner.os == 'Windows'
       uses: seanmiddleditch/gha-setup-ninja@v5
+
+    - name: Install Ninja (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ninja-build
 
     - name: Configure CMake
       run: |
