Add Itch "Add Mod" Functionality

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,6 +73,14 @@ qt_add_executable(TrenchKit
   utils/NexusModsAuth.cpp
   utils/NexusModsClient.h
   utils/NexusModsClient.cpp
+  utils/ItchUploadInfo.h
+  utils/ItchUploadInfo.cpp
+  utils/ItchUrlParser.h
+  utils/ItchUrlParser.cpp
+  utils/ItchAuth.h
+  utils/ItchAuth.cpp
+  utils/ItchClient.h
+  utils/ItchClient.cpp
   utils/ModUpdateInfo.h
   utils/ModUpdateService.h
   utils/ModUpdateService.cpp
@@ -82,6 +90,10 @@ qt_add_executable(TrenchKit
   widgets/NexusFileSelectionDialog.cpp
   widgets/NexusDownloadDialog.h
   widgets/NexusDownloadDialog.cpp
+  widgets/ItchFileSelectionDialog.h
+  widgets/ItchFileSelectionDialog.cpp
+  widgets/ItchDownloadDialog.h
+  widgets/ItchDownloadDialog.cpp
   widgets/ModUpdateDialog.h
   widgets/ModUpdateDialog.cpp
 
