--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: ✨ Feature Request
 description: Suggest an idea or improvement for TrenchKit
-title: "[Feature]: "
+title: "Feature - "
 labels: ["enhancement"]
 assignees: []
 body:
