Enhanced conflict detection
- persist-cache
- add file-level detail modal
- Incremental scanning

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -119,6 +119,8 @@ qt_add_executable(TrenchKit
   modals/content/ItchDownloadModalContent.cpp
   modals/content/AddModModalContent.h
   modals/content/AddModModalContent.cpp
+  modals/content/ConflictDetailModalContent.h
+  modals/content/ConflictDetailModalContent.cpp
 
   resources.qrc
   app.rc
