Add mod dependency support and update documentation
- Introduced ModManifestReader for reading mod manifests from .pak files.
- Updated ModInfo and ModConflictDetector to handle mod dependencies.
- Added new icons for dependency status in resources.
- Enhanced README and MODMAKER documentation to include mod manifest details.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,6 +93,8 @@ qt_add_executable(TrenchKit
   core/utils/NexusUrlParser.cpp
   core/utils/ItchUrlParser.h
   core/utils/ItchUrlParser.cpp
+  core/utils/ModManifestReader.h
+  core/utils/ModManifestReader.cpp
   core/utils/PakFileReader.h
   core/utils/PakFileReader.cpp
   core/utils/TranslationManager.h
