Enhance issue templates and workflows by adding 'Mod list' option and updating label types

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -41,6 +41,7 @@ body:
       description: Which part of TrenchKit is affected?
       options:
         - Mod install
+        - Mod list
         - Mod updates
         - Profiles
         - Backups
